--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "parcel src/index.html src/styles/main.scss src/js/main.js",
+    "dev": "parcel src/index.html src/styles/main.scss src/js/main.js --no-cache",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,6 +12,7 @@
   "description": "",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.13.0",
-    "parcel": "^2.13.0"
+    "parcel": "^2.13.0",
+    "sass": "^1.81.0"
   }
 }
