--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@parcel/transformer-sass": "^2.13.0",
     "parcel": "^2.13.0",
-    "sass": "^1.81.0"
+    "sass": "^1.81.0",
+    "sharp": "^0.33.5"
   }
 }
