--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "parcel src/index.html",
+    "dev": "parcel src/index.html src/styles/main.scss src/js/main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
