--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "ebac_talks",
   "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
     "dev": "parcel src/index.html src/styles/main.scss src/js/main.js",
+    "build": "parcel build src/index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,6 +14,7 @@
     "@parcel/transformer-sass": "^2.13.0",
     "parcel": "^2.13.0",
     "sass": "^1.81.0",
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.5",
+    "svgo": "^3.3.2"
   }
 }
